fix path alias incorrect config

--- a/ecop-client/tsconfig.json
+++ b/ecop-client/tsconfig.json
@@ -12,10 +12,30 @@
     "module": "ESNext",
     "moduleResolution": "Node",
     "resolveJsonModule": true,
-    "isolatedModules": true,
     "noEmit": true,
-    "jsx": "react-jsx"
+    "jsx": "react-jsx",
+    "baseUrl": "./",
+    "paths": {
+      "@components/*": ["src/components/*"],
+      "@config/*": ["src/config/*"],
+      "@customEnvs": ["src/config/customEnvs"],
+      "@contexts/*": ["src/contexts/*"],
+      "@functions/*": ["src/functions/*"],
+      "@graphql/*": ["src/graphql/*"],
+      "@helpers/*": ["src/helpers/*"],
+      "@hooks/*": ["src/hooks/*"],
+      "@interfaces/*": ["src/interfaces/*"],
+      "@layout/*": ["src/layout/*"],
+      "@models/*": ["src/models/*"],
+      "@pages/*": ["src/pages/*"],
+      "@redux/*": ["src/redux/*"],
+      "@routes/*": ["src/routes/*"],
+      "@services/*": ["src/services/*"],
+      "@styles/*": ["src/styles/*"],
+      "@themes/*": ["src/themes/*"],
+      "@utils/*": ["src/utils/*"]
+    }
   },
-  "include": ["src"],
+
   "references": [{ "path": "./tsconfig.node.json" }]
 }
