--- a/ecop-client/package.json
+++ b/ecop-client/package.json
@@ -14,6 +14,7 @@
     "coverage": "vitest run --coverage"
   },
   "dependencies": {
+    "classnames": "^2.3.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   },
@@ -36,6 +37,7 @@
     "eslint-plugin-react-hooks": "^4.6.0",
     "jsdom": "^21.1.0",
     "prettier": "^2.8.3",
+    "sass": "^1.57.1",
     "typescript": "^4.9.3",
     "vite": "^4.0.0",
     "vitest": "^0.28.3"
